--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "mongoose": "^5.7.3",
     "multer": "^1.4.2",
     "multer-gridfs-storage": "^3.3.0",
+    "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "request": "^2.88.0",
     "response": "^0.18.0",
