--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "escape-html": "^1.0.3",
     "etag": "^1.8.1",
     "express": "^4.17.1",
+    "express-session": "^1.17.0",
     "extend": "^3.0.2",
     "extsprintf": "^1.4.0",
     "fast-deep-equal": "^2.0.1",
