--- a/package.json
+++ b/package.json
@@ -167,6 +167,7 @@
     "parseurl": "^1.3.3",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^5.0.1",
     "passport-strategy": "^1.0.0",
     "path-to-regexp": "^5.0.0",
     "pause": "^0.1.0",
